# agent-quantspace

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README-zh.md  README.en.md  README.md  pyproject.toml
data/: README-zh.md  README.md
data/pools/: future_trend.json  index_rotation.json  sample_etf_rotation.json
docs/: README-zh.md  README.md  architecture.md  data_layout.md  examples.md  open_source_scope.md  panda_data_ingest.md  private_extension_pattern.md  project-skills.md  quantskills_pandadata_course_outline_zh.md
reports/: README-zh.md  README.md
reports/strategy_examples/: README.md  csi300_if_ma10_atr_reversion.md  csi300_if_xgboost_triple_barrier.md  futures_cross_sectional_reversal.md  futures_xgboost_rank.md
scripts/: README-zh.md  README.md  generate_sample_data.py  import_panda_data_demo.py  import_strategy_data.py  run_cross_sectional_demo.py  run_strategy_reports.py  run_time_series_demo.py
skills/: __init__.py
skills/analyze/: SKILL.md  __init__.py  attribution_core.py  attribution_counterfactual.py  attribution_decision.py  attribution_factor.py  attribution_ledger.py  attribution_ranking.py  attribution_robustness.py  attribution_shapley.py  attribution_stat_tests.py  backtest.py  exit_analysis.py  factor_analysis.py  tearsheet.py  ts_analysis.py
skills/backtest/: SKILL.md  __init__.py  cost_model.py  exit_analysis.py  filters.py  overlay_metrics.py  vector.py
skills/compute/: SKILL.md  __init__.py  adjust.py  cs_factor_examples.py  indicators.py  label_maker.py  regime.py  resample.py  ts_factor_examples.py  utils.py  wrappers.py
skills/construct/: SKILL.md  combiner.py  weighting.py
skills/ingest/: SKILL.md  __init__.py  panda_data.py  panda_future_tick.py  symbol_map.py
skills/ml/: SKILL.md  __init__.py  lasso_tracker.py  ml_factor.py
skills/model/: SKILL.md  lasso_tracker.py  ml_engine.py  ml_factor.py
skills/report/: SKILL.md  __init__.py  charts.py  renderer.py  strategy_markdown.py
skills/research/: SKILL.md  __init__.py  factor_screening.py  param_sensitivity.py  strategy_comparison.py
skills/store/: SKILL.md  adjusted_quality.py  data_manager.py
strategies/: README-zh.md  README.md
strategies/cross_sectional/: README-zh.md  README.md  STRATEGY.md  __init__.py  exits.py  factor_frame.py  factors.py  io.py  ml_rank.py  modular_backtester.py  plotting.py  rules.py  signals_base.py  signals_top_pct.py  types.py
strategies/time_series/: README-zh.md  README.md  STRATEGY.md  __init__.py  features.py  ml.py  rules.py  signal_engine.py  types.py
tests/: README-zh.md  README.md  __init__.py  conftest.py
tests/contracts/: test_data_contracts.py  test_public_api.py
tests/docs/: __init__.py  test_documented_examples.py
tests/fixtures/: __init__.py  (+2 more)
(+93 files in other folders)
